--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@hookform/resolvers": "^3.10.0",
-    "@imgly/background-removal": "^1.5.7",
+    "@imgly/background-removal": "^1.5.6",
+    "@imgly/background-removal-node": "^1.4.5",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
@@ -36,13 +37,12 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^11.17.0",
+    "framer-motion": "^11.18.0",
     "geist": "^1.3.1",
     "lucide-react": "^0.468.0",
     "next": "^15.1.4",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.4",
-    "onnxruntime-web": "^1.20.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
@@ -55,14 +55,16 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^8.56.12",
-    "@types/node": "^20.17.12",
+    "@types/node": "^20.17.13",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
-    "@typescript-eslint/eslint-plugin": "^8.19.1",
-    "@typescript-eslint/parser": "^8.19.1",
+    "@typescript-eslint/eslint-plugin": "^8.20.0",
+    "@typescript-eslint/parser": "^8.20.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^15.1.4",
-    "postcss": "^8.4.49",
+    "null-loader": "^4.0.1",
+    "onnxruntime-web": "^1.20.1",
+    "postcss": "^8.5.1",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "prisma": "^5.22.0",
